[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
libc = "0.2"
glib-sys = "0.9.0"
gobject-sys = "0.9.0"

[dev-dependencies]
shell-words = "0.1.0"
tempdir = "0.3"

[features]
v2_22 = []
v2_24 = ["v2_22"]
dox = []

[lib]
name = "javascriptcore_sys"

[package]
authors = ["The Gtk-rs Project Developers"]
build = "build.rs"
description = "Sys functions for the Rust bindings of the javacriptcore library"
homepage = "http://gtk-rs.org"
keywords = ["javascript", "gtk-rs", "gnome"]
license = "MIT"
name = "javascriptcore-rs-sys"
repository = "https://github.com/gtk-rs/javascriptcore-rs"
version = "0.1.1"
